<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/listaIcon"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/baseline_bookmark_24"
            app:layout_constraintBottom_toTopOf="@+id/listaTxt"
            app:layout_constraintEnd_toStartOf="@+id/perfilIcon"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/perfilIcon"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toTopOf="@+id/usernameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toEndOf="@+id/logo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/listaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:text="@string/my_list"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/usernameTxt"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="@+id/logo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="37dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/serach_bg"
        android:elevation="5dp"
        android:queryHint="Search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/animeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/anime"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mangaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/manga"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manhuaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/manhua"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manhwaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/manhwa"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/red_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mostViewTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/most_viwed_in_2024"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/list_bg"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingStart="5dp"
                    android:src="@drawable/baseline_bookmark_24" />
            </HorizontalScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/topAnime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/top_animes"
            android:textColor="@color/white"
            android:textSize="12sp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/list_bg"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:paddingStart="5dp"
                        android:src="@drawable/baseline_bookmark_24" />
                </HorizontalScrollView>
            </LinearLayout>
        <TextView
            android:id="@+id/topReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/top_readings"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/list_bg"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingStart="5dp"
                    android:src="@drawable/baseline_bookmark_24" />
            </HorizontalScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/list_bg"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:paddingStart="5dp"
                    android:src="@drawable/baseline_bookmark_24" />
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>