<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".Home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="124dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/listaIcon"
                android:layout_width="25dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/baseline_bookmark_24"
                app:layout_constraintBottom_toTopOf="@+id/listaTxt"
                app:layout_constraintEnd_toStartOf="@+id/perfilIcon"
                app:layout_constraintHorizontal_bias="0.947"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/perfilIcon"
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/icon"
                app:layout_constraintBottom_toTopOf="@+id/usernameTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.958"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/usernameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.969"
                app:layout_constraintStart_toEndOf="@+id/logo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="34dp" />

            <TextView
                android:id="@+id/listaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="290dp"
                android:text="@string/my_list"
                android:textColor="#000000"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/usernameTxt"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="@+id/logo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="34dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/serach_bg"
            android:elevation="5dp"
            android:queryHint="Search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/red_bg"
            android:paddingVertical="5dp"
            android:text="@string/my_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp">
            <ImageView
                android:id="@+id/animeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/animeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/anime"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_remove_circle_outline_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/divisor"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp">
            <ImageView
                android:id="@+id/animeImg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/animeName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/anime"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_remove_circle_outline_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
</layout>